--- a/math/BUILD
+++ b/math/BUILD
@@ -8,6 +8,7 @@ cc_test(
     srcs = ["quarternion_test.cc"],
     deps = [
         ":quarternion",
+	"@com_monkeynova_gunit_main//:test_main",
         "@com_google_googletest//:gtest",
         "@com_google_absl//absl/strings",
     ],
